--- a/readme
+++ b/readme
@@ -1,6 +1,6 @@
-![Image 1](./readmeimage/1.png)
-![Image 2](./readmeimage/2.png)
-![Image 3](./readmeimage/3.png)
-![Image 4](./readmeimage/4.png)
-![Image 5](./readmeimage/5.png)
-![Image 6](./readmeimage/6.png)
+![Image 1](https://github.com/username/repository/blob/main/readmeimage/1.png)
+![Image 2](https://github.com/username/repository/blob/main/readmeimage/2.png)
+![Image 3](https://github.com/username/repository/blob/main/readmeimage/3.png)
+![Image 4](https://github.com/username/repository/blob/main/readmeimage/4.png)
+![Image 5](https://github.com/username/repository/blob/main/readmeimage/5.png)
+![Image 6](https://github.com/username/repository/blob/main/readmeimage/6.png)
